fix: file path to allow game background to be visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ body {
 }
 
 #game {
-    background-image: url(/assets/sprites/levelsandcrawler.png);
+    background-image: url(../sprites/levelsandcrawler.png);
     background-size: cover;
     padding-left: 0;
     padding-right: 0;
